--- a/pursuit/Views/EmployerBase/BaseEmployer.storyboard
+++ b/pursuit/Views/EmployerBase/BaseEmployer.storyboard
@@ -40,12 +40,12 @@
         <!--JobsEmployer-->
         <scene sceneID="bNt-oj-Rh9">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="JobsEmployer" storyboardName="JobsEmployer" referencedIdentifier="JobsEmployer" id="sq9-AN-clp" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="JobsEmployer" storyboardName="JobCreation" referencedIdentifier="JobsEmployer" id="sq9-AN-clp" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Kve-vc-E8I"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o73-bh-MbF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-950" y="-305"/>
+            <point key="canvasLocation" x="-951" y="-308"/>
         </scene>
         <!--ApplicantsEmployer-->
         <scene sceneID="Sh9-tc-Anx">
