--- a/pursuit/Abbas Ali/Resource/Views/ResourceCreation.storyboard
+++ b/pursuit/Abbas Ali/Resource/Views/ResourceCreation.storyboard
@@ -12,13 +12,13 @@
         <!--Jobs-->
         <scene sceneID="DIP-RJ-kQa">
             <objects>
-                <viewController id="PuW-db-ZlV" customClass="JobViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PuW-db-ZlV" customClass="ResourceTableViewCell" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0uc-lA-Re3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yfE-y9-Xfj">
-                                <rect key="frame" x="0.0" y="103" width="393" height="710"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="724-hR-Z3u">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
@@ -188,10 +188,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ev8-lc-syy">
-                                        <rect key="frame" x="0.0" y="210" width="393" height="500"/>
+                                        <rect key="frame" x="0.0" y="210" width="393" height="456"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MO3-Q0-v4E">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="500"/>
+                                                <rect key="frame" x="0.0" y="-22" width="393" height="500"/>
                                                 <subviews>
                                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TL2-xk-2TV">
                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="500"/>
@@ -208,7 +208,7 @@
                                                             </constraints>
                                                         </view>
                                                         <prototypes>
-                                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JobViewController" id="6w1-Tz-g4s" customClass="JobViewController" customModule="pursuit" customModuleProvider="target">
+                                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ResourceTableViewCell" id="6w1-Tz-g4s" customClass="ResourceTableViewCell" customModule="pursuit" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="50" width="393" height="44"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6w1-Tz-g4s" id="mpw-zW-eu7">
@@ -268,7 +268,7 @@
         <!--Details-->
         <scene sceneID="LPb-wu-gNB">
             <objects>
-                <viewController storyboardIdentifier="task" id="hHM-HI-Nir" customClass="TaskViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="task2" id="hHM-HI-Nir" customClass="Task2ViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eRg-cs-zuo">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -697,10 +697,10 @@
             </objects>
             <point key="canvasLocation" x="1920" y="73"/>
         </scene>
-        <!--Entry View Controller-->
+        <!--Entry2 View Controller-->
         <scene sceneID="LtD-06-jNz">
             <objects>
-                <viewController storyboardIdentifier="entry" id="E4W-x8-K7j" customClass="EntryViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="entry2" id="E4W-x8-K7j" customClass="Entry2ViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kVG-Qg-aiw">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1243,7 +1243,7 @@
         <!--Navigation Controller-->
         <scene sceneID="gPk-iy-vAY">
             <objects>
-                <navigationController storyboardIdentifier="JobsEmployer" automaticallyAdjustsScrollViewInsets="NO" id="AKk-zZ-kJE" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ResourcesAdmin" automaticallyAdjustsScrollViewInsets="NO" id="AKk-zZ-kJE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="iiy-sO-ONx">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
