--- a/pursuit/Views/JobSeekerBase/BaseJobSeeker.storyboard
+++ b/pursuit/Views/JobSeekerBase/BaseJobSeeker.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -57,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="-951" y="-206"/>
         </scene>
-        <!--ProfileJobS-->
+        <!--ProfileJobSeeker-->
         <scene sceneID="rcG-XF-Roo">
             <objects>
-                <viewControllerPlaceholder storyboardName="ProfileJobSeeker" referencedIdentifier="ProfileJobS" id="aUS-jl-yja" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="ProfileJobSeeker" referencedIdentifier="ProfileJobSeeker" id="aUS-jl-yja" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Yp6-bf-7Ve"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5PN-YT-6eK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
