--- a/pursuit/Views/GuestBase/ProfileGuest.storyboard
+++ b/pursuit/Views/GuestBase/ProfileGuest.storyboard
@@ -28,7 +28,7 @@
         <!--Profile-->
         <scene sceneID="nFe-Gz-pMn">
             <objects>
-                <viewController id="V92-lm-XSu" sceneMemberID="viewController">
+                <viewController id="V92-lm-XSu" customClass="GuestViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZLJ-eb-i0J">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
